=head1 NAME

Badger::Changes - Summary of changes in the Badger toolkit

=head1 CHANGES

Added copy_file() and move_file() methods to Badger::Filesystem.
Added copy() and move() methods to Badger::Filesystem::File.

=head2 Version 0.06

Added L<debug_msg()|Badger::Base/debug_msg()> to L<Badger::Base>.
Also add C<Badger::Base::Trial> definition for use with the 
L<try()|Badger::Base/try()> method.

Added L<Badger::Log> and L<Badger::Log::File>.

Added L<Badger::Timestamp>.

Added L<Badger::Logic>.

Added L<Bin()|Badger::Filesystem/Bin()> to L<Badger::Filesystem>.

Added L<lib|Badger/lib> import hook to L<Badger>.

Changed L<Badger::Class::Config> to maintain the order of configuration
parameters where possible (i.e. when expressed as a list ref rather than
a hash ref).  Also added C<target:var> fallback which looks in the target
object or hash ref for the variable.  This allows options to default to 
the values set by preceeding options.

=head2 Version 0.05

Refactored L<Badger::Factory>.

Added support to L<Badger::Exporter> for the C<=> pseudo-sigil which can be
used to create constants on the fly.

    package Badger::Example;
    use Badger::Class
        exports => {
            tags => {
                math => {
                    e   => '=2.718',
                    pi  => '=3.142',
                    phi => '=1.618',
                },
            }
        };
    
    package main;
    use Badger::Example ':math';
    
    print e;            # 2.718
    print pi;           # 3.142
    print phi;          # 1.618

=head2 Version 0.04

Added the L<throw_msg()|Badger::Base/throw_msg()> method to L<Badger::Base>.

Added L<init_method|Badger::Class/init_method> hook to L<Badger::Class> and 
L<initialiaser()|Badger::Class/initialiaser()> to L<Badger::Class::Methods>.

Changed L<Badger::Exception> L<match_type()|Badger::Exception/match_type()>
method to accept a list or hash reference, or a string of whitespace delimited 
exception types.
